JumpScript/tests/baselines/reference/indexerSignatureWithRestParam.errors.txt
tests/cases/compiler/indexerSignatureWithRestParam.jump(2,6): error TS1017: An index signature cannot have a rest parameter.
tests/cases/compiler/indexerSignatureWithRestParam.jump(6,6): error TS1017: An index signature cannot have a rest parameter.


==== tests/cases/compiler/indexerSignatureWithRestParam.jump (2 errors) ====
    interface I {
        [...x]: string;
         ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
    }
    
    class C {
        [...x]: string
         ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
    }